fix:Members items wrapping
The member items within a team would not wrap. Fixed it so they wrap.

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -73,6 +73,7 @@
     display: flex;
     justify-content: space-around;
     margin: 10px 5px 5px 5px;
+    flex-wrap: wrap;
 }
 .member{
     color: black;
@@ -81,6 +82,7 @@
     flex-direction: column;
     align-items: center;
     border: 1px solid black;
+    margin-bottom: 10px;
 }
 .member > p{
     margin: 0;
